# fat-forensic

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Cargo.toml  README.md  clippy.toml  deny.toml  mkdocs.yml  release-plz.toml
.github/workflows/: ci.yml  docs.yml  fuzz.yml  release-plz.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: CHANGELOG.md  Cargo.toml
core/src/: boot.rs  bytes.rs  dirent.rs  error.rs  exfat.rs  fat.rs  fs.rs  lib.rs  time.rs  vfs.rs
core/tests/: oracle.rs
docs/: PRD.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-two-crate-core-forensic-split.md  0002-single-auto-detecting-reader.md  0003-forbid-unsafe-pure-rust.md  0004-forensic-parses-raw-structures.md  0005-anomalies-as-graded-observations.md  0006-low-msrv-floor.md  0007-local-bounds-checked-readers.md  0008-opt-in-vfs-feature.md  0009-release-plz-committed-lock.md
forensic/: CHANGELOG.md  Cargo.toml
forensic/src/: lib.rs
forensic/tests/: audit.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bpb.rs  dir_entry.rs  exfat_boot.rs  exfat_dir.rs  fat_chain.rs  fuzz_forensic.rs
supply-chain/: config.toml
tests/data/: README.md  mint.sh
